--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -1,22 +1,26 @@
 <!-- CTA -->
-<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
-  <div class="bg-slate-200 rounded-lg py-8 lg:py-16 p-4 sm:p-8 lg:p-16">
-    <div class="flex items-center">
-      <div class="sm:ml-4">
-        <div class="text-lg sm:text-xl mb-8 font-medium leading-relaxed tracking-tight">
-          <p>I tuoi cilindri perdono olio o aria frequentemente?</p>
-          <p class="text-gray-700">Hai bisogno di una riparazione urgente di un cilindro idraulico o pneumatico?</p>
-          <p>Vorresti assistenza per identificare le guarnizioni dei tuoi cilindri o delle tue presse?</p>
-          <p class="text-gray-700">Vuoi avere un cilindro di scorta ma non hai i disegni costruttivi originali?</p>
-        </div>
+<div class="relative py-24 sm:py-32 bg-gray-100">
+  <div class="mx-auto max-w-7xl px-6 lg:px-8">
+    <div class="mx-auto max-w-4xl">
+      <div class="text-xl lg:text-2xl tracking-tight">
 
-        <a href="{{ relref . "/contatti" }}" class="inline-flex items-center justify-center rounded-lg text-lg font-medium red-title">
-          Possiamo aiutarti
+          <p>I tuoi cilindri <span class="text-red-700">perdono</span> olio o aria frequentemente?</p>
+          <p>Hai bisogno di una <span class="text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
+          <p>Vorresti assistenza per identificare le <span class="text-red-700">guarnizioni</span> dei tuoi cilindri o delle tue presse?</p>
+          <p>Vuoi avere un <span class="text-red-700">cilindro di scorta</span> ma non hai i disegni costruttivi originali?</p>
+      </div>
+
+      <div class="mt-8">
+        <a class="inline-flex items-center justify-center p-2 sm:px-4 border text-gray-800 border-gray-800 rounded-lg font-semibold" href="/servizi">
+          <span>Scopri di più</span>
           <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
           </svg>
         </a>
       </div>
+
+
     </div>
+
   </div>
-</section>
+</div>
