--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,8 @@
 
 @layer base {
   html {
-    font-family: "Inter", system-ui, sans-serif;
+    font-family: "InterVariable", system-ui, sans-serif;
+    font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+    font-variation-settings: normal;
   }
 }
