--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,10 +6,10 @@
 <div class="relative isolate overflow-hidden px-6 pt-14 lg:px-8 bg-slate-800">
   {{ with .Params.backgroundImage }}<img src="{{ . }}" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">{{ end }}
   <div class="max-w-3xl py-32 sm:py-48 lg:py-56">
-    <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">{{ .Params.heading }}</h1>
+    <h1 class="text-4xl sm:text-5xl font-semibold tracking-tight text-white">{{ .Params.heading }}</h1>
   </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/70 transform-gpu lg:blur-3xl" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-b from-black/90" aria-hidden="true"></div>
 </div>
 
 {{ .Content }}
