--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,89 +1,19 @@
 {{ define "main" }}
 
 <!-- Hero -->
-<div class="relative overflow-hidden isolate px-6 pt-14 lg:px-8 bg-slate-800">
-  <img src="/images/forging.jpeg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
-  <div class="mx-auto max-w-7xl py-28 sm:py-44 lg:py-52">
-    <h1 class="mb-4 text-base sm:text-lg md:text-2xl font-semibold leading-7 text-red-800 uppercase">Cilindri idraulici e pneumatici</h1>
-    <div class="text-4xl font-bold tracking-tight text-white sm:text-6xl space-y-4">
+<div class="relative isolate overflow-hidden px-6 pt-14 lg:px-8 bg-slate-800">
+  <!--
+  <img src="" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+-->
+  <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
+    <h1 class="mb-4 sm:mb-6 text-2xl sm:text-3xl lg:text-4xl font-semibold tracking-tight text-red-700">Cilindri idraulici e pneumatici</h1>
+    <div class="text-3xl sm:text-4xl lg:text-5xl font-semibold tracking-tight text-white">
       <p>Li ripariamo, li costruiamo</p>
       <p>Forniamo assistenza e guarnizioni</p>
     </div>
   </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/70 transform-gpu lg:blur-3xl" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-b from-black/90" aria-hidden="true"></div>
 </div>
-
-<!-- Gallery -->
-<div class="max-w-screen-xl mx-auto">
-  <div class="py-8 lg:py-16 px-4 sm:px-8 lg:px-16">
-    <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-      {{ range seq 12 }}
-        {{ $image := resources.Get (printf "images/ref-%d.jpg" .) }}
-        {{ with $image }}
-          <div>
-            <img class="h-auto max-w-full rounded-lg" src="{{ .RelPermalink }}" alt="">
-          </div>
-        {{ end }}
-      {{ end }}
-      <div>
-    </div>
-  </div>
-</div>
-
-<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
-  <div class="bg-slate-200 rounded-lg py-8 lg:py-16 p-4 sm:p-8 lg:p-16">
-    <div class="flex items-center">
-      <div class="sm:ml-4">
-        <div class="text-lg sm:text-xl mb-8 font-medium leading-relaxed tracking-tight">
-          <p>I tuoi cilindri perdono olio o aria frequentemente?</p>
-          <p class="text-gray-700">Hai bisogno di una riparazione urgente di un cilindro idraulico o pneumatico?</p>
-          <p>Vorresti assistenza per identificare le guarnizioni dei tuoi cilindri o delle tue presse?</p>
-          <p class="text-gray-700">Vuoi avere un cilindro di scorta ma non hai i disegni costruttivi originali?</p>
-        </div>
-
-        <a href="{{ relref . "/contatti" }}" class="inline-flex items-center justify-center rounded-lg text-lg font-medium red-title">
-          Possiamo aiutarti
-          <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-          </svg>
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
-
-          <p class="mb-4 text-xl md:text-2xl font-semibold leading-none tracking-normal red-title uppercase">Test call to action</p>
-
-  <div class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32">
-    <svg viewBox="0 0 1024 1024" class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0" aria-hidden="true">
-      <circle cx="512" cy="512" r="512" fill="url(#759c1415-0410-454c-8f7c-9a820de03641)" fill-opacity="0.7" />
-      <defs>
-        <radialGradient id="759c1415-0410-454c-8f7c-9a820de03641">
-          <stop stop-color="#7775D6" />
-          <stop offset="1" stop-color="#E935C1" />
-        </radialGradient>
-      </defs>
-    </svg>
-    <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-    <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-      <div class="mx-auto max-w-2xl lg:mx-0">
-        <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">I tuoi cilindri perdono olio o aria frequentemente?</h2>
-        <div class="mt-6 prose text-gray-300">
-          <p>Grazie alla... possiamo aiutarti con:</p>
-<ul>
-          <li>Riparazione urgente di cilindri idraulici o pneumatici</li>
-          <li>Assistenza per identificare le guarnizioni dei tuoi cilindri o delle tue presse</li>
-          <li>Avere un cilindro di scorta anche senza avere i disegni costruttivi originali</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
 
 {{ end }}
