--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,14 +2,18 @@
 
 <!-- Hero -->
 <div class="relative isolate overflow-hidden px-6 pt-14 lg:px-8 bg-slate-800">
-  <!--
-  <img src="" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
--->
+  <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
-    <h1 class="mb-4 sm:mb-6 text-2xl sm:text-3xl lg:text-4xl font-semibold tracking-tight text-red-700">Cilindri idraulici e pneumatici</h1>
+    <h1 class="mb-4 sm:mb-8 text-xl sm:text-2xl lg:text-3xl font-semibold tracking-tight text-red-700">Cilindri idraulici e pneumatici</h1>
     <div class="text-3xl sm:text-4xl lg:text-5xl font-semibold tracking-tight text-white">
-      <p>Li ripariamo, li costruiamo</p>
+      <p>Li ripariamo, li costruiamo.</p>
       <p>Forniamo assistenza e guarnizioni</p>
+    </div>
+    <div class="mt-8 lg:mt-16">
+      <a class="inline-flex items-center justify-center p-3 sm:px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/servizi">
+        <span>I nostri servizi</span>
+        <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
+      </a>
     </div>
   </div>
 
