--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -15,7 +15,7 @@
       </button>
     </div>
     <div class="hidden lg:flex lg:justify-end lg:gap-x-12 leading-6 text-gray-300">
-      <a href="/about" class="hover:text-white">Chi siamo</a>
+      <a href="/chi-siamo" class="hover:text-white">Chi siamo</a>
       <a href="/servizi" class="hover:text-white">I nostri servizi</a>
       <a href="/contatti" class="hover:text-white">Contatti</a>
     </div>
@@ -43,9 +43,9 @@
       <div class="mt-6 flow-root">
         <div class="-my-6">
           <div class="space-y-2 py-6">
-            <a href="/about" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Chi siamo</a>
-            <a href="/servizi" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">I nostri servizi</a>
-            <a href="/contatti" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Contatti</a>
+            <a href="/chi-siamo" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-300">Chi siamo</a>
+            <a href="/servizi" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-300">I nostri servizi</a>
+            <a href="/contatti" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-300">Contatti</a>
           </div>
         </div>
       </div>
