--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,10 @@
 {{ define "main" }}
 
 <!-- Hero -->
-<div class="relative isolate overflow-hidden px-6 pt-14 lg:px-8 bg-slate-800">
+<div class="relative isolate overflow-hidden mb-4 px-6 pt-14 lg:px-8 bg-slate-800">
+  <!--
   <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+-->
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h1 class="mb-4 sm:mb-8 text-xl sm:text-2xl lg:text-3xl font-semibold tracking-tight text-red-700">Cilindri idraulici e pneumatici</h1>
     <div class="text-3xl sm:text-4xl lg:text-5xl font-semibold tracking-tight text-white">
@@ -18,6 +20,62 @@
   </div>
 
   <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-b from-black/90" aria-hidden="true"></div>
+</div>
+
+<!-- Chi siamo -->
+<div class="relative isolate overflow-hidden mb-4 px-6 lg:px-8 bg-slate-800">
+  <!--
+  <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+-->
+  <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
+    <h2 class="text-3xl sm:text-4xl lg:text-5xl font-semibold tracking-tight text-white">Al servizio dell'industria</h2>
+    <div class="mt-8 lg:mt-16">
+      <a class="inline-flex items-center justify-center p-3 sm:px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/servizi">
+        <span>Chi siamo</span>
+        <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
+      </a>
+    </div>
+  </div>
+
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/50" aria-hidden="true"></div>
+</div>
+
+<div class="grid grid-cols-1 gap-x-4 gap-y-4 lg:max-w-none lg:grid-cols-2">
+
+  <!-- Digital Service -->
+  <div class="relative isolate overflow-hidden px-6 lg:px-8 bg-slate-800">
+    <img src="/images/digital-service-mockup.png" alt="" class="absolute w-full h-auto inset-0 -z-10 object-cover">
+    <div class="mx-auto max-w-7xl py-28">
+      <h2 class="text-3xl sm:text-4xl lg:text-5xl font-semibold tracking-tight text-white">Centro Cilindri Digital Service</h2>
+      <div class="mt-8 lg:mt-16">
+        <a class="inline-flex items-center justify-center p-3 sm:px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/servizi#digital-service">
+          <span>Scopri di più</span>
+          <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
+        </a>
+      </div>
+    </div>
+
+    <div class="absolute w-full h-full inset-0 -z-10 bg-black/60" aria-hidden="true"></div>
+  </div>
+
+  <!-- Urgenze o impianto fermo? -->
+  <div class="relative isolate overflow-hidden px-6 lg:px-8 bg-slate-800">
+    <!--
+    <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+  -->
+    <div class="mx-auto max-w-7xl py-28">
+      <h2 class="text-3xl sm:text-4xl lg:text-5xl font-semibold tracking-tight text-white">Urgenze o impianto fermo?</h2>
+      <div class="mt-8 lg:mt-16">
+        <a class="inline-flex items-center justify-center p-3 sm:px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/contatti">
+          <span>Contattaci</span>
+          <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
+        </a>
+      </div>
+    </div>
+
+    <div class="absolute w-full h-full inset-0 -z-10 bg-black/50" aria-hidden="true"></div>
+  </div>
+
 </div>
 
 {{ end }}
