--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -1,26 +1,22 @@
 <!-- CTA -->
-<div class="relative py-24 sm:py-32 bg-gray-100">
-  <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-4xl">
-      <div class="text-xl lg:text-2xl tracking-tight">
-
-          <p>I tuoi cilindri <span class="text-red-700">perdono</span> olio o aria frequentemente?</p>
-          <p>Hai bisogno di una <span class="text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
-          <p>Vorresti assistenza per identificare le <span class="text-red-700">guarnizioni</span> dei tuoi cilindri o delle tue presse?</p>
-          <p>Vuoi avere un <span class="text-red-700">cilindro di scorta</span> ma non hai i disegni costruttivi originali?</p>
-      </div>
-
-      <div class="mt-8">
-        <a class="inline-flex items-center justify-center p-2 sm:px-4 border text-gray-800 border-gray-800 rounded-lg font-semibold" href="/servizi">
-          <span>Scopri di più</span>
-          <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-          </svg>
-        </a>
-      </div>
-
-
+<div class="relative isolate overflow-hidden px-6 pt-14 lg:px-8 bg-slate-800">
+  <!--
+  <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+-->
+  <div class="mx-auto max-w-5xl py-14 sm:py-20 lg:py-24">
+    <div class="text-xl sm:text-2xl lg:text-3xl tracking-tight text-gray-200">
+      <p>I tuoi cilindri <span class="text-red-700">perdono</span> olio o aria frequentemente?</p>
+      <p>Hai bisogno di una <span class="text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
+      <p>Vorresti assistenza per identificare le <span class="text-red-700">guarnizioni</span> dei tuoi cilindri o delle tue presse?</p>
+      <p>Vuoi avere un <span class="text-red-700">cilindro di scorta</span> ma non hai i disegni costruttivi originali?</p>
     </div>
-
+    <div class="mt-8 lg:mt-16">
+      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/contatti">
+        <span>Contattaci</span>
+        <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
+      </a>
+    </div>
   </div>
+
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-b from-black/90" aria-hidden="true"></div>
 </div>
