--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ .Description }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     {{/* styles */}}
     {{ $options := dict "inlineImports" true }}
     {{ $styles := resources.Get "css/styles.css" }}
@@ -16,14 +16,17 @@
       {{ $styles = $styles | minify | fingerprint | resources.PostProcess }}
     {{ end }}
     <link href="{{ $styles.RelPermalink }}" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
   </head>
   <body>
-    <div class="bg-white">
-      {{ partial "nav.html" . }}
-      <main>{{ block "main" . }}{{ end }}</main>
-      {{ partial "footer.html" . }}
-    </div>
-    <!-- We use cookies to provide our services and for analytics and marketing. To find out more about our use of cookies and how you can disable them, please see our Privacy Policy. By continuing to browse our website, you agree to our use of cookies. -->
+    {{ partial "nav.html" . }}
+    <main>{{ block "main" . }}{{ end }}</main>
+    {{ partial "footer.html" . }}
+
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+
     {{ $scripts := resources.Get "js/main.js" }}
     <script src="{{ $scripts.RelPermalink }}"></script>
   </body>
