--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
       <p>Forniamo assistenza e guarnizioni</p>
     </div>
     <div class="mt-8 lg:mt-16">
-      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/servizi">
+      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-medium" href="/servizi">
         <span>I nostri servizi</span>
         <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
       </a>
@@ -30,7 +30,7 @@
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h2 class="text-4xl sm:text-5xl lg:text-6xl font-semibold tracking-tight text-gray-200">Al servizio dell'industria</h2>
     <div class="mt-8 lg:mt-16">
-      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/chi-siamo">
+      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-medium" href="/chi-siamo">
         <span>Chi siamo</span>
         <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
       </a>
@@ -50,7 +50,7 @@
     <div class="mx-auto max-w-7xl py-28">
       <h2 class="text-4xl sm:text-5xl lg:text-6xl font-semibold tracking-tight text-gray-200">Urgenze o impianto fermo?</h2>
       <div class="mt-8 lg:mt-16">
-        <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/contatti">
+        <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-medium" href="/contatti">
           <span>Contattaci</span>
           <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
         </a>
@@ -68,7 +68,7 @@
     <div class="mx-auto max-w-7xl py-28">
       <h2 class="text-4xl sm:text-5xl lg:text-6xl font-semibold tracking-tight text-gray-200">Centro Cilindri Digital Service</h2>
       <div class="mt-8 lg:mt-16">
-        <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/servizi#digital-service">
+        <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-medium" href="/servizi#digital-service">
           <span>Scopri di più</span>
           <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
         </a>
