--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -4,14 +4,14 @@
   <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
 -->
   <div class="mx-auto max-w-5xl py-14 sm:py-20 lg:py-24">
-    <div class="text-xl sm:text-2xl lg:text-3xl tracking-tight text-gray-200">
+    <div class="text-xl sm:text-2xl tracking-tight text-gray-200">
       <p>I tuoi cilindri <span class="text-red-700">perdono</span> olio o aria frequentemente?</p>
       <p>Hai bisogno di una <span class="text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
       <p>Vorresti assistenza per identificare le <span class="text-red-700">guarnizioni</span> dei tuoi cilindri o delle tue presse?</p>
       <p>Vuoi avere un <span class="text-red-700">cilindro di scorta</span> ma non hai i disegni costruttivi originali?</p>
     </div>
     <div class="mt-8 lg:mt-16">
-      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-semibold" href="/contatti">
+      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-medium" href="/contatti">
         <span>Contattaci</span>
         <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
       </a>
