--- a/layouts/shortcodes/slide.html
+++ b/layouts/shortcodes/slide.html
@@ -1,7 +1,16 @@
+<!--
 <div class="flex-none relative isolate overflow-hidden max-w-[20rem] lg:max-w-[28rem] min-h-[32rem] p-6 lg:p-8 lg:py-16 rounded-2xl">
   <div class="relative flex flex-col w-full h-full z-20">
     <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
   </div>
-  <div class="absolute size-full inset-0 z-10 bg-black/50"></div>
+  <div class="absolute size-full inset-0 z-10 bg-black/30 bg-gradient-to-t from-black/30"></div>
+  <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
+</div>
+-->
+<div class="overflow-hidden w-2/5 mr-8 min-h-[32rem] p-6 lg:p-8 lg:p-12 rounded-2xl">
+  <div class="relative flex flex-col w-full h-full z-20">
+    <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
+  </div>
+  <div class="absolute size-full inset-0 z-10 bg-black/30 bg-gradient-to-b from-black/50"></div>
   <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
 </div>
