--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,7 +6,7 @@
 <div class="relative isolate overflow-hidden px-6 pt-14 lg:px-8 bg-slate-800">
   {{ with .Params.backgroundImage }}<img src="{{ . }}" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">{{ end }}
   <div class="max-w-3xl py-32 sm:py-48 lg:py-56">
-    <h1 class="text-4xl sm:text-5xl lg:text-6xl font-semibold tracking-tight text-gray-200">{{ .Params.heading }}</h1>
+    <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">{{ .Params.heading }}</h1>
   </div>
 
   <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-b from-black/90" aria-hidden="true"></div>
