--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -4,7 +4,7 @@
   <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
 -->
   <div class="mx-auto max-w-5xl py-14 sm:py-20 lg:py-24">
-    <div class="text-xl sm:text-2xl tracking-tight text-gray-200">
+    <div class="text-lg sm:text-xl tracking-tight text-gray-200">
       <p>I tuoi cilindri <span class="text-red-700">perdono</span> olio o aria frequentemente?</p>
       <p>Hai bisogno di una <span class="text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
       <p>Vorresti assistenza per identificare le <span class="text-red-700">guarnizioni</span> dei tuoi cilindri o delle tue presse?</p>
