--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,8 +6,8 @@
   <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
 -->
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
-    <h1 class="mb-4 sm:mb-8 text-xl sm:text-2xl lg:text-3xl font-semibold tracking-tight text-red-700">Cilindri idraulici e pneumatici</h1>
-    <div class="text-4xl sm:text-5xl lg:text-6xl font-semibold tracking-tight text-gray-200">
+    <h1 class="mb-4 sm:mb-8 text-lg sm:text-xl uppercase font-semibold tracking-tight text-red-700">Cilindri idraulici e pneumatici</h1>
+    <div class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">
       <p>Li ripariamo, li costruiamo.</p>
       <p>Forniamo assistenza e guarnizioni</p>
     </div>
@@ -28,7 +28,7 @@
   <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
 -->
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
-    <h2 class="text-4xl sm:text-5xl lg:text-6xl font-semibold tracking-tight text-gray-200">Al servizio dell'industria</h2>
+    <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Al servizio dell'industria</h2>
     <div class="mt-8 lg:mt-16">
       <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-medium" href="/chi-siamo">
         <span>Chi siamo</span>
@@ -48,7 +48,7 @@
     <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   -->
     <div class="mx-auto max-w-7xl py-28">
-      <h2 class="text-4xl sm:text-5xl lg:text-6xl font-semibold tracking-tight text-gray-200">Urgenze o impianto fermo?</h2>
+      <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Urgenze o impianto fermo?</h2>
       <div class="mt-8 lg:mt-16">
         <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-medium" href="/contatti">
           <span>Contattaci</span>
@@ -66,7 +66,7 @@
     <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   -->
     <div class="mx-auto max-w-7xl py-28">
-      <h2 class="text-4xl sm:text-5xl lg:text-6xl font-semibold tracking-tight text-gray-200">Centro Cilindri Digital Service</h2>
+      <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Centro Cilindri Digital Service</h2>
       <div class="mt-8 lg:mt-16">
         <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white bg-red-700 border-red-700 hover:border-gray-200 hover:bg-transparent rounded-lg font-medium" href="/servizi#digital-service">
           <span>Scopri di più</span>
