--- a/layouts/shortcodes/slide.html
+++ b/layouts/shortcodes/slide.html
@@ -1,14 +1,18 @@
 <!--
-<div class="flex-none relative isolate overflow-hidden max-w-[20rem] lg:max-w-[28rem] min-h-[32rem] p-6 lg:p-8 lg:py-16 rounded-2xl">
+<div class="relative isolate overflow-hidden w-[30rem] mr-8 min-h-[32rem] p-6 lg:p-8 lg:p-12 rounded-2xl">
   <div class="relative flex flex-col w-full h-full z-20">
     <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
   </div>
-  <div class="absolute size-full inset-0 z-10 bg-black/30 bg-gradient-to-t from-black/30"></div>
+  <div class="absolute size-full inset-0 z-10 bg-black/30 bg-gradient-to-b from-black/50"></div>
   <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
 </div>
 -->
-<div class="overflow-hidden flex flex-col w-[30rem] mr-8 min-h-[32rem] p-6 lg:p-8 lg:p-12 rounded-2xl">
-  <div class="relative z-20 leading-relaxed mt-auto text-sm/7 text-white">{{ .Get "text" }}</div>
-  <div class="absolute size-full inset-0 z-10 bg-black/40 bg-gradient-to-t from-black/40"></div>
-  <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
-</div>
+<li class="w-2/5 flex-shrink-0 snap-center">
+  <div class="relative isolate overflow-hidden w-full min-h-[32rem] p-6 lg:p-8 lg:p-12 rounded-2xl">
+    <div class="relative flex flex-col w-full h-full z-20">
+      <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
+    </div>
+    <div class="absolute size-full inset-0 z-10 bg-black/30 bg-gradient-to-b from-black/50"></div>
+    <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
+  </div>
+</li>
