--- a/layouts/shortcodes/slide.html
+++ b/layouts/shortcodes/slide.html
@@ -7,7 +7,7 @@
   <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
 </div>
 -->
-<li class="w-2/5 flex-shrink-0 snap-center">
+<li class="min-w-[30rem] sm:w-2/5 flex-shrink-0 snap-center">
   <div class="relative isolate overflow-hidden w-full min-h-[32rem] p-6 lg:p-8 lg:p-12 rounded-2xl">
     <div class="relative flex flex-col w-full h-full z-20">
       <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
