--- a/layouts/shortcodes/slide.html
+++ b/layouts/shortcodes/slide.html
@@ -7,12 +7,10 @@
   <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
 </div>
 -->
-<li class="min-w-[30rem] sm:w-2/5 flex-shrink-0 snap-center">
-  <div class="relative isolate overflow-hidden w-full min-h-[32rem] p-6 lg:p-8 lg:p-12 rounded-2xl">
-    <div class="relative flex flex-col w-full h-full z-20">
-      <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
-    </div>
-    <div class="absolute size-full inset-0 z-10 bg-black/30 bg-gradient-to-b from-black/50"></div>
-    <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
+<li class="relative isolate overflow-hidden w-[20rem] lg:w-2/5 min-h-[24rem] lg:min-h-[30rem] flex-shrink-0 snap-center p-6 lg:p-8 lg:p-12 rounded-2xl {{ if (.Get "first") }}ml-6{{ end }}{{ if (.Get "last") }}mr-6{{ end }}">
+  <div class="relative flex flex-col w-full h-full z-20">
+    <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
   </div>
+  <div class="absolute size-full inset-0 z-10 bg-black/40 bg-gradient-to-t from-black/40"></div>
+  <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
 </li>
