Completato passaggio del deploy precedente e creato file TODO

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,9 +2,7 @@
 
 <!-- Hero -->
 <div class="relative isolate overflow-hidden mb-4 px-6 pt-14 lg:px-8 bg-slate-800">
-  <!--
-  <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
--->
+  <img src="/images/cilindri-arancio.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h1 class="mb-4 sm:mb-8 text-lg sm:text-xl uppercase font-semibold tracking-tight text-red-700">Cilindri idraulici e pneumatici</h1>
     <div class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">
@@ -19,14 +17,12 @@
     </div>
   </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-b from-black/90" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/40 bg-gradient-to-b from-black/50" aria-hidden="true"></div>
 </div>
 
 <!-- Chi siamo -->
 <div class="relative isolate overflow-hidden mb-4 px-6 lg:px-8 bg-slate-800">
-  <!--
-  <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
--->
+  <img src="/images/industria.jpeg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Al servizio dell'industria</h2>
     <div class="mt-8 lg:mt-16">
@@ -37,7 +33,7 @@
     </div>
   </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/50" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
 </div>
 
 <div class="grid grid-cols-1 gap-x-4 gap-y-4 lg:max-w-none lg:grid-cols-2">
