--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,10 +2,10 @@
 
 <!-- Hero -->
 <div class="relative isolate overflow-hidden mb-4 px-6 pt-14 lg:px-8 bg-slate-800">
-  <img src="/images/cilindri-arancio.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+  <img src="https://blog.areatecnica.it/perche-fasce-guida-incrementano-vita-affidabilita-cilindro-idraulico/hydraulic-cylinder.png" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
-    <h1 class="mb-4 sm:mb-8 text-lg sm:text-xl uppercase font-semibold tracking-tight text-red-700">Cilindri idraulici e pneumatici</h1>
-    <div class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">
+    <h1 class="text-lg sm:text-xl uppercase font-semibold tracking-tight text-red-600">Cilindri idraulici e pneumatici</h1>
+    <div class="mt-6 text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">
       <p>Li ripariamo, li costruiamo.</p>
       <p>Forniamo assistenza e guarnizioni</p>
     </div>
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/40 bg-gradient-to-b from-black/50" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-b from-black/50" aria-hidden="true"></div>
 </div>
 
 <!-- Chi siamo -->
@@ -33,16 +33,14 @@
     </div>
   </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
 </div>
 
 <div class="grid grid-cols-1 gap-x-4 gap-y-4 lg:max-w-none lg:grid-cols-2">
 
   <!-- Urgenze o impianto fermo? -->
   <div class="relative isolate overflow-hidden px-6 lg:px-8 bg-slate-800">
-    <!--
-    <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
-  -->
+    <img src="https://www.mossini.com/wp-content/uploads/2018/12/press-hot-forming-DETAIL.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
     <div class="mx-auto max-w-7xl py-28">
       <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Urgenze o impianto fermo?</h2>
       <div class="mt-8 lg:mt-16">
@@ -53,14 +51,12 @@
       </div>
     </div>
 
-    <div class="absolute w-full h-full inset-0 -z-10 bg-black/50" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
   </div>
 
   <!-- Digital Service -->
   <div class="relative isolate overflow-hidden px-6 lg:px-8 bg-slate-800">
-    <!--
-    <img src="/images/test.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
-  -->
+    <img src="/images/ds.png" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
     <div class="mx-auto max-w-7xl py-28">
       <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Centro Cilindri Digital Service</h2>
       <div class="mt-8 lg:mt-16">
@@ -71,7 +67,7 @@
       </div>
     </div>
 
-    <div class="absolute w-full h-full inset-0 -z-10 bg-black/60" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
   </div>
 
 </div>
