--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -1,6 +1,6 @@
 <section class="relative overflow-hidden bg-slate-800 py-20 sm:py-32">
-  <div class="max-w-7xl px-4 sm:px-6 lg:px-8">
-    <div class="max-w-2xl lg:max-w-3xl">
+  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+    <div class="mx-auto max-w-2xl lg:max-w-3xl">
       <div class="text-lg text-gray-300">
         <p>I tuoi cilindri <span class="text-red-700">perdono</span> olio o aria frequentemente?</p>
         <p>Hai bisogno di una <span class="text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
@@ -10,7 +10,7 @@
 
       <div class="mt-8 lg:mt-16">
         <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white font-medium bg-red-700 border-red-700 hover:bg-red-600 rounded-lg" href="/servizi">
-          <span>Contattaci</span>
+          <span>Possiamo aiutarti</span>
           <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
         </a>
       </div>
