--- a/layouts/shortcodes/slide.html
+++ b/layouts/shortcodes/slide.html
@@ -1,4 +1,4 @@
-<div class="w-full lg:w-2/5 flex-none snap-center px-4 sm:px-6">
+<div class="w-4/5 lg:w-3/5 xl:w-2/5 flex-none snap-center px-4 sm:px-6">
   <div class="relative transform overflow-hidden w-full min-h-[30rem] sm:min-h-[40rem] rounded-2xl">
     <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
     <div class="absolute size-full inset-0 bg-black/20 z-10"></div>
