--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,7 +26,7 @@
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Al servizio dell'industria</h2>
     <div class="mt-8 lg:mt-16">
-      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white font-medium bg-red-700 border-red-700 hover:bg-red-600 rounded-lg" href="/servizi">
+      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white font-medium bg-red-700 border-red-700 hover:bg-red-600 rounded-lg" href="/chi-siamo">
         <span>Chi siamo</span>
         <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
       </a>
