--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 <!-- Hero -->
 <div class="relative isolate overflow-hidden mb-4 px-6 pt-14 lg:px-8 bg-slate-800">
-  <img src="https://blog.areatecnica.it/perche-fasce-guida-incrementano-vita-affidabilita-cilindro-idraulico/hydraulic-cylinder.png" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+  <img src="/images/hero.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h1 class="text-lg sm:text-xl uppercase font-semibold tracking-tight text-red-600">Cilindri idraulici e pneumatici</h1>
     <div class="mt-6 text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-b from-black/50" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-b from-black/70" aria-hidden="true"></div>
 </div>
 
 <!-- Chi siamo -->
