--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,1 +1,1 @@
-<img src="{{ .Get "src" }}" class="h-[10rem] sm:h-[15rem] lg:h-[20rem] w-full object-cover {{ .Get "class" }}">
+<img data-editable="true" src="{{ .Get "src" }}" class="h-[12rem] sm:h-[18rem] lg:h-[24rem] w-full object-cover {{ .Get "class" }}">
