--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,9 +5,6 @@
     <title>{{ block "title" . }}Centro Cilindri - Il partner ideale per l’intero ciclo di vita dei tuoi cilindri{{ end }}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ .Description }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     {{/* styles */}}
     {{ $options := dict "inlineImports" true }}
     {{ $styles := resources.Get "css/styles.css" }}
@@ -20,7 +17,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     {{ partial "nav.html" . }}
@@ -28,6 +24,9 @@
     {{ partial "footer.html" . }}
 
     {{ $scripts := resources.Get "js/main.js" }}
+    {{ if hugo.IsProduction }}
+      {{ $scripts = $scripts | minify | fingerprint }}
+    {{ end }}
     <script src="{{ $scripts.RelPermalink }}"></script>
   </body>
 </html>
