--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <!-- Hero -->
-<div class="relative isolate overflow-hidden mb-4 px-6 pt-14 lg:px-8 bg-slate-800">
+<div class="relative isolate overflow-hidden mb-4 pt-14 px-6 lg:px-8 bg-slate-800">
   <img src="/images/hero.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h1 class="text-lg sm:text-xl uppercase font-semibold tracking-tight text-red-600">Cilindri idraulici e pneumatici</h1>
