--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,5 @@
-<header class="absolute inset-x-0 top-0 z-50">
-  <nav class="mx-auto max-w-7xl flex items-center justify-between p-6 lg:px-8" aria-label="Navigazione">
+<header class="absolute inset-x-0 top-0 z-50 p-6 lg:px-8">
+  <nav class="mx-auto max-w-7xl flex items-center justify-between" aria-label="Navigazione">
     <div class="flex lg:flex-1">
       <a href="/" class="-m-1.5 p-1.5">
         <span class="sr-only">Centro Cilindri</span>
