--- a/layouts/index.html
+++ b/layouts/index.html
@@ -44,14 +44,14 @@
     <div class="mx-auto max-w-7xl py-28">
       <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Urgenze o impianto fermo?</h2>
       <div class="mt-8 lg:mt-16">
-      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white font-medium bg-red-700 border-red-700 hover:bg-red-600 rounded-lg" href="/servizi">
-        <span>Contattaci</span>
-        <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
-      </a>
+        <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white font-medium bg-red-700 border-red-700 hover:bg-red-600 rounded-lg" href="/servizi">
+          <span>Possiamo aiutarti</span>
+          <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
+        </a>
       </div>
     </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
+    <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
   </div>
 
   <!-- Digital Service -->
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
+    <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
   </div>
 
 </div>
