--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -1,11 +1,10 @@
 <section class="relative overflow-hidden bg-slate-800 py-20 sm:py-32">
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/10 bg-gradient-to-b from-black/90" aria-hidden="true"></div>
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-    <div class="text-lg text-gray-200">
-      <p>I tuoi cilindri <span class="text-red-700">perdono</span> olio o aria frequentemente?</p>
-      <p>Hai bisogno di una <span class="text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
-      <p>Vorresti assistenza per identificare le <span class="text-red-700">guarnizioni</span> dei tuoi cilindri o delle tue presse?</p>
-      <p>Vuoi avere un <span class="text-red-700">cilindro di scorta</span> ma non hai i disegni costruttivi originali?</p>
+    <div class="text-lg text-gray-100">
+      <p>I tuoi cilindri <span class="font-medium text-red-700">perdono</span> olio o aria frequentemente?</p>
+      <p>Hai bisogno di una <span class="font-medium text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
+      <p>Vorresti assistenza per identificare le <span class="font-medium text-red-700">guarnizioni</span> dei tuoi cilindri o delle tue presse?</p>
+      <p>Vuoi avere un <span class="font-medium text-red-700">cilindro di scorta</span> ma non hai i disegni costruttivi originali?</p>
     </div>
 
     <div class="mt-8 lg:mt-16">
