--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -1,6 +1,6 @@
-<section class="relative overflow-hidden bg-slate-800 py-20 sm:py-32">
+<section class="relative isolate overflow-hidden bg-slate-800 py-20 sm:py-32">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-    <div class="text-lg text-gray-100">
+    <div class="text-base/5 sm:text-lg/6 text-gray-100 space-y-2">
       <p>I tuoi cilindri <span class="font-medium text-red-700">perdono</span> olio o aria frequentemente?</p>
       <p>Hai bisogno di una <span class="font-medium text-red-700">riparazione urgente</span> di un cilindro idraulico o pneumatico?</p>
       <p>Vorresti assistenza per identificare le <span class="font-medium text-red-700">guarnizioni</span> dei tuoi cilindri o delle tue presse?</p>
@@ -14,4 +14,5 @@
       </a>
     </div>
   </div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-r from-black/50" aria-hidden="true"></div>
 </section>
