--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,9 +2,9 @@
 
 <!-- Hero -->
 <div class="relative isolate overflow-hidden mb-4 pt-14 px-6 lg:px-8 bg-slate-800">
-  <img src="/images/hero.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+  <img src="/images/cilindri-verdi.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
-    <h1 class="text-lg sm:text-xl uppercase font-semibold tracking-tight text-red-600">Cilindri idraulici e pneumatici</h1>
+    <h1 class="text-base sm:text-xl uppercase font-semibold tracking-tight bg-white text-red-600 px-2 py-1 inline-block">Cilindri idraulici e pneumatici</h1>
     <div class="mt-6 text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">
       <p>Li ripariamo, li costruiamo.</p>
       <p>Forniamo assistenza e guarnizioni</p>
@@ -22,7 +22,7 @@
 
 <!-- Chi siamo -->
 <div class="relative isolate overflow-hidden mb-4 px-6 lg:px-8 bg-slate-800">
-  <img src="https://live.cdn.cms.sms-group.com/_processed_/0/4/csm_N-SMS2571-020-120-Tonnen-ARCCESS-Elektrolichtbogenofen_76c07dfbda.webp" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+  <img src="https://live.cdn.cms.sms-group.com/_processed_/0/d/csm_N-SMS2324-053-Einlaufseite-Vorgeruest_cc7eae032f.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Al servizio dell'industria</h2>
     <div class="mt-8 lg:mt-16">
@@ -60,7 +60,7 @@
     <div class="mx-auto max-w-7xl py-28">
       <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Centro Cilindri Digital Service</h2>
       <div class="mt-8 lg:mt-16">
-        <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white font-medium bg-red-700 border-red-700 hover:bg-red-600 rounded-lg" href="/servizi">
+        <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white font-medium bg-red-700 border-red-700 hover:bg-red-600 rounded-lg" href="/servizi/#digital-service">
           <span>Scopri di più</span>
           <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
         </a>
