--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h1 class="text-base sm:text-xl uppercase font-semibold tracking-tight bg-white text-red-600 px-2 py-1 inline-block">Cilindri idraulici e pneumatici</h1>
     <div class="mt-6 text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">
-      <p>Li ripariamo, li costruiamo.</p>
+      <p class="mb-2">Li ripariamo, li costruiamo.</p>
       <p>Forniamo assistenza e guarnizioni</p>
     </div>
     <div class="mt-8 lg:mt-16">
@@ -22,7 +22,7 @@
 
 <!-- Chi siamo -->
 <div class="relative isolate overflow-hidden mb-4 px-6 lg:px-8 bg-slate-800">
-  <img src="https://live.cdn.cms.sms-group.com/_processed_/0/d/csm_N-SMS2324-053-Einlaufseite-Vorgeruest_cc7eae032f.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+  <img src="/images/steel-pour.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Al servizio dell'industria</h2>
     <div class="mt-8 lg:mt-16">
