--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,1 +1,1 @@
-<img data-editable="true" src="{{ .Get "src" }}" class="h-[15rem] sm:h-[18rem] lg:h-[24rem] xl:h-[30rem] w-full object-cover {{ .Get "class" }}">
+<img src="{{ .Get "src" }}" class="h-[15rem] sm:h-[18rem] lg:h-[24rem] xl:h-[30rem] w-full object-cover {{ .Get "class" }}">
