--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,3 +1,33 @@
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Centro Cilindri",
+  "legalName": "Centro Cilindri Srl",
+  "foundingDate": "2023",
+  "url": "https://www.centrocilindri.it/",
+  "logo": "https://www.centrocilindri.it/images/logo.png",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Via della Canapa 3-5",
+    "addressLocality": "Macello",
+    "addressRegion": "Torino",
+    "postalCode": "10060",
+    "addressCountry": "IT"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "contactType": "customer service",
+    "telephone": "(+39) 351 4409228",
+    "email": "info@centrocilindri.it"
+  },
+  "sameAs": [
+    "https://www.instagram.com/centrocilindri/",
+    "https://www.linkedin.com/company/centrocilindrisrl/"
+  ]
+}
+</script>
+
 <header class="absolute inset-x-0 top-0 z-50 p-6 lg:px-8">
   <nav class="mx-auto max-w-7xl flex items-center justify-between" aria-label="Navigazione">
     <div class="flex lg:flex-1">
