--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -5,8 +5,8 @@
   "name": "Centro Cilindri",
   "legalName": "Centro Cilindri Srl",
   "foundingDate": "2023",
-  "url": "https://www.centrocilindri.it/",
-  "logo": "https://www.centrocilindri.it/images/logo.png",
+  "url": {{ .Site.BaseURL }},
+  "logo": {{ absURL "images/logo.png" }},
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "Via della Canapa 3-5",
