--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,9 +2,14 @@
 <html lang="it">
   <head>
     <meta charset="utf-8">
-    <title>{{ block "title" . }}Centro Cilindri Srl - Riparazione | Costruzione | Guarnizioni{{ end }}</title>
+    <title>{{ block "title" . }}Centro Cilindri Srl{{ end }}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Revisione, riparazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse, garantendo qualità, efficienza e supporto tecnico specializzato.">
+    <meta name="keywords" content="revisione, riparazione, retrofit, upgrade, costruzione, cilindri idraulici, cilindri pneumatici, guarnizioni, presse">
+    <meta property="og:title" content="Centro Cilindri Srl">
+    <meta property="og:description" content="Revisione, riparazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse, garantendo qualità, efficienza e supporto tecnico specializzato.">
+    <meta property="og:image" content="{{ absURL "images/logo.png" }}">
+
     {{/* styles */}}
     {{ $options := dict "inlineImports" true }}
     {{ $styles := resources.Get "css/styles.css" }}
