--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,11 +2,11 @@
 <html lang="it">
   <head>
     <meta charset="utf-8">
-    <title>{{ block "title" . }}Centro Cilindri Srl{{ end }}</title>
+    <title>{{ block "title" . }}{{ end }} - Centro Cilindri</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Revisione, riparazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse, garantendo qualità, efficienza e supporto tecnico specializzato.">
     <meta name="keywords" content="revisione, riparazione, retrofit, upgrade, costruzione, cilindri idraulici, cilindri pneumatici, guarnizioni, presse">
-    <meta property="og:title" content="Centro Cilindri Srl">
+    <meta property="og:title" content="Centro Cilindri">
     <meta property="og:description" content="Revisione, riparazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse, garantendo qualità, efficienza e supporto tecnico specializzato.">
     <meta property="og:image" content="{{ absURL "images/logo.png" }}">
 
