--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,5 @@
+{{ define "title" }}Revisione, riparazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse{{ end }}
+
 {{ define "main" }}
 
 <!-- Hero -->
