--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -45,9 +45,9 @@
       </button>
     </div>
     <ul class="hidden lg:flex lg:justify-end lg:space-x-12 font-semibold text-gray-200">
-      <li><a href="/chi-siamo" class="hover:text-white">Chi siamo</a></li>
-      <li><a href="/servizi" class="hover:text-white">I nostri servizi</a></li>
-      <li><a href="/contatti" class="hover:text-white">Contatti</a></li>
+      <li><a href="{{ relURL "chi-siamo" }}" class="hover:text-white">Chi siamo</a></li>
+      <li><a href="{{ relURL "servizi" }}" class="hover:text-white">I nostri servizi</a></li>
+      <li><a href="{{ relURL "contatti" }}" class="hover:text-white">Contatti</a></li>
     </ul>
   </nav>
 </header>
@@ -65,9 +65,9 @@
     </button>
 
     <ul class="space-y-6">
-      <li><a href="/chi-siamo" class="hover:text-blue-500">Chi siamo</a></li>
-      <li><a href="/servizi" class="hover:text-blue-500">I nostri servizi</a></li>
-      <li><a href="/contatti" class="hover:text-blue-500">Contatti</a></li>
+      <li><a href="{{ relURL "chi-siamo" }}" class="hover:text-blue-500">Chi siamo</a></li>
+      <li><a href="{{ relURL "servizi" }}" class="hover:text-blue-500">I nostri servizi</a></li>
+      <li><a href="{{ relURL "contatti" }}" class="hover:text-blue-500">Contatti</a></li>
     </ul>
   </div>
 </div>
