--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ block "title" . }}{{ end }} - Centro Cilindri</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Revisione, riparazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse, garantendo qualità, efficienza e supporto tecnico specializzato.">
+    <meta name="description" content="{{ block "description" . }}Revisione, progettazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse.{{ end}}">
     <meta name="keywords" content="revisione, riparazione, retrofit, upgrade, costruzione, cilindri idraulici, cilindri pneumatici, guarnizioni, presse">
     <meta property="og:title" content="Centro Cilindri">
     <meta property="og:description" content="Revisione, riparazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse, garantendo qualità, efficienza e supporto tecnico specializzato.">
