--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "title" }}{{ .Title }}{{ end }}
 
+{{ define "description" }}{{ .Description }}{{ end }}
+
 {{ define "main" }}
 
 <!-- Hero -->
